--- a/src/Feed.css
+++ b/src/Feed.css
@@ -1,11 +1,11 @@
 .feed {
+    top: 80px;
     flex: 0.6;
     margin: 0 20px;
-    width: 100%;
 }
 
 .feed__inputContainer {
-    background-color: white; 
+    background-color: #fff;
     padding: 10px;
     padding-bottom: 20px;
     border-radius: 10px;
@@ -14,7 +14,7 @@
 
 .feed__input {
     border: 1px solid lightgray;
-    border-radius: 30px;
+    border-radius: 25px;
     display: flex;
     padding: 10px;
     color: gray;
