--- a/src/Header.css
+++ b/src/Header.css
@@ -1,13 +1,13 @@
 .header {
     position: sticky;
+    top: 0;
     display: flex;
-    background-color: white;
+    background-color: #fff;
     justify-content: space-evenly;
     border-bottom: 0.1px solid lightgray;
-    padding-top: 10px;
-    padding-bottom: 10px;
     width: 100%;
-    z-index: 999;
+    z-index: 500;
+    padding: 5px;
 }
 
 .header__left {
